...
struct PatientDetailView: View {
    var patient: Patient
    @State private var showingPrescribeMedicationSheet = false

    var body: some View {
        List {
            Section(header: Text("Patient Information").accessibilityIdentifier("PatientDetailView")) {
                HStack {
                    Text("Name:")
                    Spacer()
                    Text("\(patient.firstName) \(patient.lastName)")
                        .foregroundColor(.secondary)
                }
...
                Text("Current Medications")
                Spacer()
                Button {
                    showingPrescribeMedicationSheet.toggle()
                } label: {
                    Label("Prescribe", systemImage: "pencil")
                }.accessibilityIdentifier("PrescribeButton")
            }) {
                if patient.returnActiveMedications().isEmpty {
                    Text("No active medications").foregroundColor(.secondary)
                } else {
                    ForEach(patient.returnActiveMedications(), id: \.id) { medication in
                        VStack(alignment: .leading) {
...
