...
               .toolbar {
                   ToolbarItem(placement: .navigationBarTrailing) {
                       Button(action: {
                           showingAddPatientView.toggle()
                       }) {
                           Image(systemName: "plus")
                       }.accessibilityIdentifier("AddPatientButton")
                   }
               }
               .sheet(isPresented: $showingAddPatientView) {
                   NewPatientFormView(patientManager: patientManager)
               }
           }
...
